--- a/config/templates/includes/messages.html
+++ b/config/templates/includes/messages.html
@@ -1,8 +1,8 @@
 {% if messages %}
-    <section class="py-2 md:py-4">
+    <section class="py-2 md:py-4 hidden has-[.alert:not(.hidden)]:block">
         {% for message in messages %}
-            <div id="alert-{{ forloop.counter }}"
-                 class="flex items-center p-4 mb-4 rounded-lg {% if message.tags == 'info' or message.tags == 'success' %}text-primary-700 bg-primary-100 dark:bg-gray-800 dark:text-primary-300{% else %} text-red bg-red-50 dark:bg-gray-800 dark:text-red-400{% endif %}"
+            <div id="{{ id_prefix|default:'alert' }}-{{ forloop.counter }}"
+                 class="alert flex items-center p-4 mb-4 rounded-lg {% if message.tags == 'info' or message.tags == 'success' %}text-primary-700 bg-primary-100 dark:bg-gray-800 dark:text-primary-300{% else %} text-red bg-red-50 dark:bg-gray-800 dark:text-red-400{% endif %}"
                  role="alert">
                 <svg class="flex-shrink-0 w-4 h-4 dark:text-gray-300"
                      aria-hidden="true"
@@ -15,7 +15,7 @@
                 <div class="ms-3 text-sm font-medium">{{ message }}</div>
                 <button type="button"
                         class="ms-auto -mx-1.5 -my-1.5 bg-gray-50 text-gray-500 rounded-lg focus:ring-2 focus:ring-gray-400 p-1.5 hover:bg-gray-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-gray-300 dark:hover:bg-gray-700 dark:hover:text-white"
-                        data-dismiss-target="#alert-{{ forloop.counter }}"
+                        data-dismiss-target="#{{ id_prefix|default:'alert' }}-{{ forloop.counter }}"
                         aria-label="Close">
                     <span class="sr-only">Dismiss</span>
                     <svg class="w-3 h-3"
