Allow linking a form template to app users in the add/edit form template pages. (#70)
* Allow linking a form template to app users in the add/edit form template pages.

* Save and Cancel buttons take you to the form template detail page.

--- a/config/templates/publish_mdm/change_form_template.html
+++ b/config/templates/publish_mdm/change_form_template.html
@@ -4,8 +4,7 @@
 {% block content %}
     <p class="mb-4 dark:text-gray-400">
         A form template is used to create forms in ODK Central, one for each
-        assigned App User. Use the App User Import/Export to assign form
-        templates to App Users.
+        assigned App User.
     </p>
     <div class="mb-4 grid gap-4 sm:grid-cols-2 md:mb-8">
         {{ form.media }}
@@ -17,21 +16,24 @@
                     <div id="id_{{ field.name }}_container">
                         {{ field.label_tag }}
                         {{ field }}
+                        {% if field.name == "app_users" and not field.field.choices %}
+                            <span class="text-sm">The current project does not have any App Users at the moment.</span>
+                        {% endif %}
                         {{ field.errors }}
                     </div>
                 {% endfor %}
                 <div class="flex items-center space-x-4">
                     <button type="submit" class="btn btn-outline btn-primary">
                         {% if form_template.id %}
+                            {% url 'publish_mdm:form-template-detail' request.organization.slug request.odk_project.pk form_template.id as cancel_url %}
                             Save
                         {% else %}
+                            {% url 'publish_mdm:form-template-list' request.organization.slug request.odk_project.pk as cancel_url %}
                             Add
                         {% endif %}
                         form template
                     </button>
-                    <a type="button"
-                       class="btn btn-outline"
-                       href="{% url 'publish_mdm:form-template-list' request.organization.slug request.odk_project.pk %}">Cancel</a>
+                    <a type="button" class="btn btn-outline" href="{{ cancel_url }}">Cancel</a>
                 </div>
             </div>
         </form>
