--- a/config/templates/includes/mdm_enroll_qr_code.html
+++ b/config/templates/includes/mdm_enroll_qr_code.html
@@ -2,9 +2,9 @@
     <div class="loading hidden absolute text-center w-full top-[-11px]">
         <span class="px-3 py-1 text-xs font-medium leading-none text-center text-primary-700 bg-primary-200 rounded-full animate-pulse dark:bg-blue-900 dark:text-blue-200">loading...</span>
     </div>
-    {% if not_found %}
+    {% if error %}
         <div class="flex flex-col items-center justify-center w-full aspect-square text-red bg-red-50 dark:bg-gray-800 dark:text-red-400">
-            <p class="text-center">QR CODE NOT FOUND</p>
+            <p class="text-center">{{ error }}</p>
         </div>
     {% else %}
         <div class="flex flex-col items-center justify-center w-full aspect-square border bg-primary-100 dark:bg-gray-700 border-gray-200 dark:border-gray-600">
