--- a/config/templates/includes/form_version_app_users.html
+++ b/config/templates/includes/form_version_app_users.html
@@ -1,6 +1,6 @@
 {{ record.app_user_count }}
 {% if record.app_user_count %}
-    <span data-popover-target="app_users_{{ row_counter }}"
+    <span data-popover-target="app_users_{{ record.pk }}"
           data-popover-placement="right"
           class="ml-2 mb-2">
         <svg class="inline w-4 h-4 text-gray-500 dark:text-gray-200"
@@ -13,7 +13,8 @@
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
         </svg>
     </span>
-    <div id="app_users_{{ row_counter }}"
+    <div data-popover
+         id="app_users_{{ record.pk }}"
          role="tooltip"
          class="absolute max-w-sm z-100 invisible inline-block px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg shadow-xs opacity-0 tooltip dark:border-gray-700 dark:text-white dark:bg-gray-700">
         <div class="grid gap-y-2 gap-x-4 grid-cols-1{% if record.app_user_count >= 10 %} md:grid-cols-2{% endif %}">
