Fix long tooltip being cut off.

--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -27,7 +27,7 @@
     </head>
     <body class="bg-white dark:bg-gray-900 antialiased">
         {% include "includes/navbar.html" %}
-        <div class="flex overflow-hidden pt-[62px] dark:bg-gray-900">
+        <div class="flex pt-[62px] dark:bg-gray-900">
             {% include "includes/sidebar.html" %}
             <div class="lg:ms-64 relative h-full w-full dark:bg-gray-900">
                 <main class="py-8 px-8">
