update homepage copy

--- a/config/templates/account/login.html
+++ b/config/templates/account/login.html
@@ -26,7 +26,24 @@
                             <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">
                                 Get started quickly with Google Sheets
                             </h3>
-                            <p class="mb-2 font-light text-gray-500 dark:text-gray-400">Import your own content and documents</p>
+                            <p class="mb-2 font-light text-gray-500 dark:text-gray-400">
+                                Effortlessly sign in with Google and access your Sheets for seamless data management.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex mt-4">
+                        <svg class="w-5 h-5 mr-2 text-green shrink-0"
+                             fill="currentColor"
+                             viewBox="0 0 20 20"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd">
+                            </path>
+                        </svg>
+                        <div>
+                            <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">Form templates and variables</h3>
+                            <p class="mb-2 font-light text-gray-500 dark:text-gray-400">
+                                Create flexible, reusable forms that automatically personalize for each App User.
+                            </p>
                         </div>
                     </div>
                     <div class="flex mt-4">
@@ -39,7 +56,24 @@
                         </svg>
                         <div>
                             <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">Connect Tailscale devices</h3>
-                            <p class="mb-2 font-light text-gray-500 dark:text-gray-400">Sync data from your Tailnet</p>
+                            <p class="mb-2 font-light text-gray-500 dark:text-gray-400">
+                                Securely link your devices to ODK Central using Tailscale VPN integration.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex mt-4">
+                        <svg class="w-5 h-5 mr-2 text-green shrink-0"
+                             fill="currentColor"
+                             viewBox="0 0 20 20"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd">
+                            </path>
+                        </svg>
+                        <div>
+                            <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">Mobile Device Management (MDM)</h3>
+                            <p class="mb-2 font-light text-gray-500 dark:text-gray-400">
+                                Automatically configure and deploy ODK Collect and forms to your device fleet with TinyMDM.
+                            </p>
                         </div>
                     </div>
                 </div>
