--- a/config/templates/account/login.html
+++ b/config/templates/account/login.html
@@ -72,7 +72,7 @@
                         <div>
                             <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">Mobile Device Management (MDM)</h3>
                             <p class="mb-2 font-light text-gray-500 dark:text-gray-400">
-                                Automatically configure and deploy ODK Collect and forms to your device fleet with TinyMDM.
+                                Automatically configure and deploy ODK Collect and forms to your device fleet with either TinyMDM or Android EMM.
                             </p>
                         </div>
                     </div>
