Add support for Android Enterprise MDM. (#83)
* Add support for Android Enterprise MDM.

* Add some code comments.

* Improvements for tests.

* Implement push_device_config for the Android Enterprise MDM.

* Update a policy in the MDM when its JSON template is updated in Django Admin.

* Unit test improvements.

* Unit test improvements.

* Minor improvements.

* Minor improvements.

* Temp build Docker image with this branch.

* Fix error downloading devices if no devices are enrolled.

* Rename some files and functions: TinyMDM -> MDM.

* Add docs on Android EMM setup.

* Fix KeyErrors when pulling devices.

* Update .github/workflows/docker-publish.yml

Co-authored-by: Tobias McNulty <tobias@caktusgroup.com>

---------

Co-authored-by: Tobias McNulty <tobias@caktusgroup.com>

--- a/config/templates/includes/mdm_enroll_qr_code.html
+++ b/config/templates/includes/mdm_enroll_qr_code.html
@@ -25,4 +25,11 @@
             </svg>
         {% endif %}
     </div>
+    {% if fleet.enrollment_url %}
+        <p class="mt-2 text-sm">
+            For a BYOD device, you can also enroll by opening this link on your device:
+            <a href="{{ fleet.enrollment_url }}"
+               class="block text-primary-600 hover:underline">{{ fleet.enrollment_url }}</a>
+        </p>
+    {% endif %}
 {% endif %}
